Fixed overlapping buttons issue

--- a/src/css/tabs.css
+++ b/src/css/tabs.css
@@ -21,6 +21,7 @@
   padding: 5px 10px;
   margin: 0;
   width: unset;
+  min-width: unset;
 }
 
 
